<resources>
    <string name="app_name">TestApplication</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="fragment_contact_list_title">Список контактов</string>
    <string name="fragment_contact_details_title">Детали контакта</string>
    <string name="fragment_contact_add_btn_txt">Включить напоминание</string>
    <string name="fragment_contact_delete_btn_txt">Выключить напоминание</string>
    <string name="receiver_birthday_message">Сегодня день рождение у</string>
    <string name="fragment_contact_details_birthday">Дата рождения: %1$d.%2$d</string>
    <string name="fragment_contact_details_empty_birthday">Дата рождения отсутствует</string>
    <string name="notification_title">День рождения</string>
    <string name="permission_dialog_message">Для отображения контактов в данном приложении требуется дать доступ к списку ваших контактов</string>
    <string name="no_permission_message">Приложение не может показать данные контактов без доступа к данным ваших контактов</string>
    <string name="contact_empty_list">Список контактов пуст</string>
    <string name="permission_dialog_positive_button">Ок</string>
    <string name="permission_dialog_negative_button">Отмена</string>
    <string name="notification_action">com.a65apps.pandaananass.tetsapplication.receivers</string>
    <string name="package_name">package:</string>
    <string name="search_title">Поиск</string>
    <string name="contact_details_request_error">Ошибка при загрузке данных</string>
    <string name="contact_list_request_error">Ошибка при загрузке данных</string>
    <string name="contact_map_direction">Ваше местоположение: </string>
    <string name="contact_map_direction_default">-</string>
    <string name="fragment_contact_details_btn_location">Местоположение</string>
    <string name="fragment_contact_map_title">Местоположение</string>
    <string name="fragment_contact_map_add_btn_name">Сохранить</string>
    <string name="fragment_contact_map_add_btn">Запись добавлена</string>
    <string name="fragment_contact_map_update_btn">Запись обновлена</string>
    <string name="fragment_contact_map_location_query_error">Ошибка при получении местоположения</string>
    <string name="fragment_contact_map_data_error">Ошибка при сохранении данных</string>
    <string name="fragment_contact_route_empty_list">Требуется назначить местоположение хотя бы еще одному контакту</string>
    <string name="fragment_contact_details_btn_route">Маршрут</string>
    <string name="fragment_contact_route_error">Ошибка при получении данных</string>
    <string name="fragment_contacts_location_map_title">Местоположение</string>
    <string name="fragment_contact_list_btn_text">Местоположение</string>
    <string name="fragment_contact_location_error">Ошибка при получении данных</string>
    <string name="fragment_contact_location_empty_list">Список пуст</string>
</resources>