<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_contact_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/contact_details_list_margin"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_contact_avatar"
            android:layout_width="@dimen/contact_avatar_width"
            android:layout_height="@dimen/contact_avatar_height"
            android:layout_marginEnd="@dimen/contact_main_info_margin"
            android:layout_marginBottom="@dimen/contact_main_info_margin"
            app:srcCompat="@drawable/ic_account_box_black_24dp" />

        <TextView
            android:id="@+id/txt_contact_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/contact_avatar_height"
            android:layout_toEndOf="@+id/img_contact_avatar"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:textSize="@dimen/contact_name_text" />

        <TextView
            android:id="@+id/txt_contact_first_number"
            style="@style/contact_details_attributes_style"
            android:layout_below="@+id/img_contact_avatar" />

        <TextView
            android:id="@+id/txt_contact_second_number"
            style="@style/contact_details_attributes_style"
            android:layout_below="@+id/txt_contact_first_number"
            android:layout_marginTop="@dimen/contact_details_list_margin" />

        <TextView
            android:id="@+id/txt_contact_first_separator"
            style="@style/contact_details_separator_style"
            android:layout_below="@+id/txt_contact_second_number"
            android:layout_marginTop="@dimen/contact_details_list_margin" />

        <TextView
            android:id="@+id/txt_contact_first_mail"
            style="@style/contact_details_attributes_style"
            android:layout_below="@+id/txt_contact_first_separator"
            android:layout_marginTop="@dimen/contact_details_list_margin" />

        <TextView
            android:id="@+id/txt_contact_second_mail"
            style="@style/contact_details_attributes_style"
            android:layout_below="@+id/txt_contact_first_mail"
            android:layout_marginTop="@dimen/contact_details_list_margin" />

        <TextView
            android:id="@+id/txt_contact_second_separator"
            style="@style/contact_details_separator_style"
            android:layout_below="@+id/txt_contact_second_mail"
            android:layout_marginTop="@dimen/contact_details_list_margin" />

        <TextView
            android:id="@+id/txt_contact_description"
            style="@style/contact_details_attributes_style"
            android:layout_below="@+id/txt_contact_second_separator"
            android:layout_marginTop="@dimen/contact_details_list_margin"
            android:maxLines="5"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/txt_contact_birthday"
            style="@style/contact_details_attributes_style"
            android:layout_below="@+id/txt_contact_description"
            android:layout_marginTop="@dimen/contact_details_list_margin" />

        <Button
            android:id="@+id/btn_contact_notification"
            style="@style/contact_details_button_style"
            android:layout_below="@+id/txt_contact_birthday"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/contact_details_list_margin"
            android:text="@string/fragment_contact_add_btn_txt" />

        <Button
            android:id="@+id/btn_contact_location"
            style="@style/contact_details_button_style"
            android:layout_below="@+id/btn_contact_notification"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/contact_details_list_margin"
            android:text="@string/fragment_contact_details_btn_location" />

        <TextView
            android:id="@+id/txt_contact_details_no_permission"
            style="@style/contact_details_error_style"
            android:text="@string/no_permission_message" />

    </RelativeLayout>

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        android:id="@+id/cpv_contact_details"
        android:layout_width="@dimen/loader_size"
        android:layout_height="@dimen/loader_size"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:cpv_animAutostart="true"
        app:cpv_color="@color/colorPrimary"
        app:cpv_indeterminate="true" />

    <TextView
        android:id="@+id/txt_contact_details_request_error"
        style="@style/contact_details_error_style"
        android:text="@string/contact_details_request_error" />

</RelativeLayout>